# vscode

./: # Exploit Title: Wondershare Driver Install Service help 10  # THIS IS AN AUTOGENERATED FILE  #su  #sudo su  #sudo su && README.md  #sudo su README.md  .artifactignore  .babelrc  .blueprintfiles  .clinerules  .copilotignore  .deepsource.toml  .dockerignore  .editorconfig  .empty-pr-marker  .env.example  .eslint-allowed-javascript-files  .eslint-ignore  .eslintignore  .eslintignore.json  .eslintrc  .eslintrc.json  .git-blame-ignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .leewayignore  .lsifrc.json  .mailmap  .main  .mention-bot  .milestone-test  .milestone-test-2  .npmrc  .nvmrc  .prettierrc  .prettierrc.json  (+414 more)
.Jules/: palette.md
.cargo/: config.toml
.chat/: functions.json
.circleci/: config.yml
.claude/: CLAUDE.md  settings.json  settings.local.json
.clinerules/: bilingual-documentation.md  english-comments.md
.config/: configuration.winget
.configurations/: configuration.dsc.yaml
.cursor/: BUGBOT.md  mcp.json
.devcontaREADME.MD/: README.md
.devcontainer/: #sudo su devcontainer.json  1devcontainer.json  Dockerfile  MIRRORS.md  README.md  README.zh-CN.md  WHY-INSIDERS.md  devcontainer  devcontainer-lock.json  devcontainer.json  devcontainer.json table  features.json  install-vscode.sh  post-create.sh  prepare.fish.sh  prepare.sh
.devcontainer-simple/: .env.example  Dockerfile  README.md  devcontainer.json
.eslint-plugin-local/: README.md  code-amd-node-module.ts  code-declare-service-brand.ts  code-ensure-no-disposables-leak-in-test.ts  code-import-patterns.ts  code-layering.ts  code-limited-top-functions.ts  code-must-use-result.ts  code-must-use-super-dispose.ts  code-no-accessor-after-await.ts  code-no-any-casts.ts  code-no-bracket-notation-for-identifiers.ts  code-no-dangerous-type-assertions.ts  code-no-declare-const-enum.ts  code-no-deep-import-of-internal.ts  code-no-deprecated-copilot-sdk.ts  code-no-direct-gulp-import.ts  code-no-disposable-leaks.ts  code-no-global-document-listener.ts  code-no-http-import.ts  code-no-icons-in-localized-strings.ts  code-no-in-operator.ts  code-no-localization-template-literals.ts  code-no-localized-model-description.ts  code-no-native-private.ts  code-no-new-javascript-files.ts  code-no-nls-in-standalone-editor.ts  code-no-observable-get-in-reactive-context.ts  code-no-potentially-unsafe-disposables.ts  code-no-reader-after-await.ts  code-no-redundant-has-before-delete.ts  code-no-runtime-import.ts  code-no-spread-operator.ts  code-no-standalone-editor.ts  code-no-static-node-module-import.ts  code-no-static-self-ref.ts  code-no-telemetry-common-property.ts  code-no-test-async-suite.ts  code-no-test-only.ts  code-no-unexternalized-strings.ts  (+21 more)
.eslintplugin/: code-amd-node-module.ts  code-declare-service-brand.ts  code-ensure-no-disposables-leak-in-test.ts  code-import-patterns.ts  code-layering.ts  code-limited-top-functions.ts  code-must-use-result.ts  code-no-dangerous-type-assertions.ts  code-no-global-document-listener.ts  (+25 more)
cli/: CONTRIBUTING.md  Cargo.toml  Cross.toml  ThirdPartyNotices.txt  build.rs  rustfmt.toml
cli/.cargo/: config.toml
cli/src/: async_pipe.rs  auth.rs  commands.rs  constants.rs  desktop.rs  download_cache.rs  json_rpc.rs  lib.rs  log.rs  msgpack_rpc.rs  options.rs  rpc.rs  self_update.rs  singleton.rs  state.rs  tunnels.rs  update.rs  update_service.rs  util.rs
cli/src/commands/: agent.rs  agent_host.rs  agent_kill.rs  agent_logs.rs  agent_ps.rs  agent_stop.rs  args.rs  context.rs  internal_wsl.rs  output.rs  serve_web.rs  tunnels.rs  update.rs  version.rs
cli/src/desktop/: version_manager.rs
cli/src/tunnels/: agent_host.rs  agent_host_metadata.rs  capability.rs  capability_local.rs  capability_wsl.rs  challenge.rs  code_server.rs  control_server.rs  dev_tunnels.rs  download_cache.rs  forwarding.rs  legal.rs  local_forwarding.rs  name_generator.rs  nosleep.rs  nosleep_linux.rs  nosleep_macos.rs  nosleep_windows.rs  paths.rs  port_forwarder.rs  protocol.rs  server_bridge.rs  server_bridge_unix.rs  server_bridge_windows.rs  server_multiplexer.rs  service.rs  service_linux.rs  service_macos.rs  service_windows.rs  shutdown_signal.rs  singleton_client.rs  singleton_server.rs  socket_signal.rs  wsl_detect.rs  wsl_server.rs
cli/src/util/: app_lock.rs  command.rs  errors.rs  extract_safety.rs  file_lock.rs  http.rs  input.rs  io.rs  is_integrated.rs  machine.rs  os.rs  prereqs.rs  ring_buffer.rs  sync.rs  tar.rs  zipper.rs
cli/src/util/workflowAutomator.workflow/Contents/: Info.plist  document.wflow
crates/sota-codegraph-cli/: Cargo.toml
crates/sota-codegraph-cli/src/: main.rs
crates/sota-codegraph-core/: Cargo.toml
crates/sota-codegraph-core/src/: embed.rs  error.rs  index.rs  lib.rs  parse.rs  search.rs  types.rs
crates/sota-codegraph-core/src/store/: falkordb.rs  mod.rs  sqlite.rs
crates/sota-codegraph-napi/: Cargo.toml  package-lock.json  package.json
crates/sota-codegraph-napi/src/: lib.rs
extensions/copilot/test/simulation/fixtures/tests/py-pyproject-toml/: pyproject.toml
extensions/copilot/test/simulation/fixtures/tests/py-pyproject-toml/src/mmath/: add.py  sub.py
extensions/copilot/test/simulation/fixtures/tests/py-pyproject-toml/tests/: test_sub.py
extensions/waveform-surfer-v2/waveform-viewer-voltai/: Cargo.toml  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
extensions/waveform-surfer-v2/waveform-viewer-voltai/scripts/: download-surfer.js
extensions/waveform-surfer-v2/waveform-viewer-voltai/src/: displayedSignalsProvider.ts  extension.ts  signalHierarchyProvider.ts  waveformEditorProvider.ts
extensions/waveform-surfer-v2/waveform-viewer-voltai/src/rust/: file_reader.rs  lib.rs  signal_cache.rs  vcd_parser.rs
extensions/waveform-surfer-v2/waveform-viewer-voltai/src/test/: extension.test.ts
extensions/waveform-surfer-v2/waveform-viewer-voltai/src/webview/: main.ts
extensions/waveform-surfer-v2/waveform-viewer-voltai/wit/: surfer.wit
(+50723 files in other folders)
