[package]
name = "surfer_parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36.0"
wasm-bindgen = "0.2"

# Waveform parsing libraries
vcd = "0.7"  # VCD file format support
# Note: Add FST and GHW parsing libraries as needed

# Utility libraries
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "MessageEvent",
  "Worker",
  "WorkerGlobalScope",
]

# Optimize for size in release builds
[profile.release]
opt-level = "s"
lto = true
panic = "abort"

# Enable debug info for wasm-pack
[profile.release.package."*"]
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]