[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "A simple Python project template."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["my_module"]

[project.optional-dependencies]
test = ["unittest"]
